syntax = "proto3";

package user_profile;

message GetUserProfileByIdRequest {
  string id = 1;
}

message GetUserProfileByNameRequest {
  string first_name = 1;
  string last_name = 2;
}

service UserProfileService {
  rpc GetUserById (GetUserProfileByIdRequest) returns (UserProfile);
  rpc GetUserByName (GetUserProfileByNameRequest) returns (UserProfile);
}

/* User Profile */
message UserProfile {
  string id = 1;
  string last_name = 2;
  string first_name = 3;
  int32 gender = 4;
  string language = 5;
  string city = 6;
  string province = 7;
  string country = 8;
  string avatar = 9;
  string signature = 10;
}

message UserProfiles {
  repeated UserProfile user_profiles = 1;
}